--- a/index.html
+++ b/index.html
@@ -4,26 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <title>Document</title>
 </head>
 <body>
     <div class="container">
     <form id="form">
-        <label for="item">Item name:</label><br>
-        <input type="text" id="item" name="item"><br>
-        <label for="description">Description:</label><br>
-        <input type="text" id="description" name="description"><br>
-        <label for="price">Price:</label><br>
-        <input type="number" id="price" name="price"><br>
-        <label for="quantity">Quantity:</label><br>
-        <input type="number" id="quantity" name="quantity"><br>
-        <button type="submit" style="margin-top:10px">Add Item</button>
+  <label for="price"  title="price">Choose Price:</label>
+  <input type="number" id="price" name="price">
+  <label for="dish" >Choose Dish:</label>
+  <input type="text" id="dish" title="dish" name="Dish" >
+  <label for="tables" >Choose a Table:</label>
+    <select id="tables">
+<option value="Table 1">Table 1</option>
+<option value="Table 2">Table 2</option>
+<option value="Table 3">Table 3</Table></option>
+    </select>
+    <input type="submit" id="submit" value="Add to bill">
     </form>
 </div>
-    <ul id="list"></ul>
+<h3>ORDERS</h3>
+
+    <ul id="all">
+    <li id="1">TABLE 1</li>
+    <li id="2">TABLE 2</li>
+    <li id="3">TABLE 3</li>
+</ul>
+
     <script src="index.js"></script>
-    </body>
 </html>
